--- a/src/assets/CSS/login.css
+++ b/src/assets/CSS/login.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 .parent-s {
-  background-image: url(/fw9-responsive-web/assets/img/authbg.png);
+  background-image: url(../img/authbg.png);
   /* background-size: cover; */
   margin: 0;
   background-repeat: no-repeat;
@@ -19,6 +19,9 @@ body {
   padding: 20px;
   max-width: 500px;
   color: white;
+}
+.pstyle {
+  font-size: x-small;
 }
 .right-side {
   max-width: 750px;
