--- a/src/assets/CSS/home.css
+++ b/src/assets/CSS/home.css
@@ -3,6 +3,10 @@ body {
   font-family: "nunito sans";
   margin: 0;
 }
+.linkstyle {
+  text-decoration: none;
+  color: inherit;
+}
 .spanzwallet {
   font-style: normal;
   font-weight: 700;
@@ -57,12 +61,22 @@ body {
 
 .zw-header {
   /* display: flex; */
-  height: 100%;
+  /* height: 100%; */
   color: white;
-  padding: 30px;
+  padding: 2%;
   background: #6379f4;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
 }
-
+.styletext {
+  color: #e0e0e0;
+  padding-right: 65%;
+  padding-left: 2%;
+}
 /*  */
+.graphic {
+  height: 100%;
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 25px;
+}
