--- a/src/assets/CSS/home.css
+++ b/src/assets/CSS/home.css
@@ -55,7 +55,11 @@ body {
   height: 100%;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
 }
-.zw-hover:hover {
+.zwlink {
+  text-decoration: none;
+  color: black;
+}
+.zwlink:hover {
   color: blue;
 }
 
