fixing file's name

--- a/src/assets/CSS/footer.css
+++ b/src/assets/CSS/footer.css
@@ -1,6 +1,6 @@
 .stylefoot {
-  background-color: #6379f4;
-  color: #ffff;
+  background-color: #b0ef5e;
+  color: black;
   font-weight: 100;
   padding: 10px;
 }
